--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <div class="about-text">
                     <h2>About Me</h2>
                     <p>I'm an aspiring software engineer who is passionate about contributing to open-source projects, creating technology to elevate people, and building community. I enjoy contemplating creative solutions to problems. A BTech undergrad majoring in Computer Science and Engineering, learning and growing every day. I've learned the importance of applying traditional methods for futuristic projects.</p>
+                    <a href="images/AanandKumarResume.pdf"><button class="btn">Download CV</button></a>
                 </div>
             </div>
         </div>
@@ -107,27 +108,31 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="projects-grid">
+
                 <div class="project">
-                    <img src="images/Screenshot 2024-07-13 174934.png" alt="Myntra Clone">
+                    <a href="https://github.com/aanandmrh222/Myntra-Clone"><img src="images/myntra.png" alt="Myntra Clone"></a>
                     <div class="project-details">
                         <h3>Myntra Clone</h3>
                         <p>Designed a user-centric e-commerce platform. Used Redux for state management of user data. Developed a highly responsive user interface with React.js and Sass, enhancing the application’s visual appeal and user experience, leading to a 30% boost in user retention and satisfaction rates. Engineered a dynamic frontend using React.js and advanced Sass styling techniques, resulting in a 40% improvement in page load times and a 25% increase in user engagement metrics.</p>
                     </div>
                 </div>
+
                 <div class="project">
-                    <img src="images/sudoku.gif" alt="Sudoku Solver Visualizer">
+                    <a href="https://github.com/aanandmrh222/Sudoku-Solver"><img src="images/sudoku.gif" alt="Sudoku Solver Visualizer"></a>
                     <div class="project-details">
                         <h3>Sudoku Solver Visualizer</h3>
                         <p>Developed and implemented a visualizer for solving Sudoku puzzles using backtracking algorithms. Designed an intuitive user interface with interactive features, such as real-time puzzle solving and difficulty selection. Improved computational efficiency and user experience through responsive design and algorithm optimization.</p>
                     </div>
                 </div>
+
                 <div class="project">
-                    <img src="images/twitter.jpg" alt="X.com Clone">
+                    <a href="#"><img src="images/twitter.jpg" alt="X.com Clone"></a>
                     <div class="project-details">
                         <h3>X.com (Twitter) Clone</h3>
                         <p>Replicated the core functionalities of Twitter, including tweet posting, liking, and commenting using React.js and Tailwind CSS. Integrated RESTful APIs for seamless communication between frontend and backend. Implemented user authentication and authorization mechanisms to ensure data security and user privacy.</p>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -136,8 +141,7 @@
         <div class="container">
             <h2>Services</h2>
             <p>
-                I offer web development services including front-end and back-end development, UI/UX design, and consulting.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptates maiores alias labore cum! Mollitia quis animi totam cum necessitatibus, quibusdam numquam quam similique illo cumque iure reiciendis praesentium. Eaque praesentium optio eos? Odio ducimus eveniet possimus sit qui eius quisquam aliquam laudantium, ab minima alias accusantium facere corrupti ratione.
+                As a dedicated software and web developer, I offer a comprehensive range of services to bring your digital vision to life. Whether you need a robust, scalable software solution or a sleek, responsive website, I have the expertise to deliver exceptional results. My services include custom software development, web application design, and e-commerce solutions, all tailored to meet your specific needs. I specialize in utilizing the latest technologies and frameworks to ensure optimal performance, security, and user experience. From initial concept to final deployment, I am committed to providing high-quality, efficient, and innovative solutions that drive your business forward and enhance your online presence.
             </p>
         </div>
     </section>
@@ -150,6 +154,8 @@
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/aanandmrh222" target="_blank">LinkedIn</a>
                 <a href="https://github.com/aanandmrh222" target="_blank">GitHub</a>
+                <a href="https://x.com/aanand5440" target="_blank">Twitter</a>
+                <a href="https://www.instagram.com/__aanand__kumar" target="_blank">Instagram</a>
             </div>
         </div>
     </section>
