--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="about-text">
                     <h2>About Me</h2>
                     <p>I'm an aspiring software engineer who is passionate about contributing to open-source projects, creating technology to elevate people, and building community. I enjoy contemplating creative solutions to problems. A BTech undergrad majoring in Computer Science and Engineering, learning and growing every day. I've learned the importance of applying traditional methods for futuristic projects.</p>
-                    <a href="images/AanandKumarResume.pdf"><button class="btn">Download CV</button></a>
+                    <a href="images/AanandKumarResume.pdf" target="_blank"><button class="btn">Download CV</button></a>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="projects-grid">
 
                 <div class="project">
-                    <a href="https://github.com/aanandmrh222/Myntra-Clone"><img src="images/myntra.png" alt="Myntra Clone"></a>
+                    <a href="https://github.com/aanandmrh222/Myntra-Clone" target="_blank"><img src="images/myntra.png" alt="Myntra Clone"></a>
                     <div class="project-details">
                         <h3>Myntra Clone</h3>
                         <p>Designed a user-centric e-commerce platform. Used Redux for state management of user data. Developed a highly responsive user interface with React.js and Sass, enhancing the application’s visual appeal and user experience, leading to a 30% boost in user retention and satisfaction rates. Engineered a dynamic frontend using React.js and advanced Sass styling techniques, resulting in a 40% improvement in page load times and a 25% increase in user engagement metrics.</p>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="project">
-                    <a href="https://github.com/aanandmrh222/Sudoku-Solver"><img src="images/sudoku.gif" alt="Sudoku Solver Visualizer"></a>
+                    <a href="https://github.com/aanandmrh222/Sudoku-Solver" target="_blank"><img src="images/sudoku.gif" alt="Sudoku Solver Visualizer"></a>
                     <div class="project-details">
                         <h3>Sudoku Solver Visualizer</h3>
                         <p>Developed and implemented a visualizer for solving Sudoku puzzles using backtracking algorithms. Designed an intuitive user interface with interactive features, such as real-time puzzle solving and difficulty selection. Improved computational efficiency and user experience through responsive design and algorithm optimization.</p>
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="project">
-                    <a href="#"><img src="images/twitter.jpg" alt="X.com Clone"></a>
+                    <a href="#" target="_blank"><img src="images/twitter.jpg" alt="X.com Clone"></a>
                     <div class="project-details">
                         <h3>X.com (Twitter) Clone</h3>
                         <p>Replicated the core functionalities of Twitter, including tweet posting, liking, and commenting using React.js and Tailwind CSS. Integrated RESTful APIs for seamless communication between frontend and backend. Implemented user authentication and authorization mechanisms to ensure data security and user privacy.</p>
